--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -32,18 +32,18 @@
         <div class = "row mx-auto" id = "groups">
             <div class = "row m-0 px-0 pb-1">
                 <div class = "col p-0"><h2>Group ({{ groups.length }})</h2></div>
-                <div *ngIf = "user.role == 'Super Admin' || user.role == 'Group Admin'" class = "col text-end p-0">
+                <div *ngIf = "user.superOrAdmin != 'none'" class = "col text-end p-0">
                     <button type = "button" class = "btn btn-primary py-1" (click) = "openModal('newGroup')">Create Group</button>
                 </div>
             </div>
             <div class = "container bg-transparent text-center p-0 m-auto w-100">
                 <div class = "row row-cols-3 row-cols-lg-6 p-0 m-0">
                     <div *ngFor = "let group of groups" class = "dropdown col-lg pb-5" id = "group" (click) = "openModal('details', group.id)">
-                        <h5>{{ group.name }}</h5>
+                        <h5>{{ group.value[0].groupname }}</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
                         <div class = "dropdown-content">
                             <div *ngFor = "let channel of channels">
-                                <a *ngIf = "channel.groupID == group.id" class = "dropdown-item" (click) = "joinChannel(group.id, channel.id)">{{ channel.name }}</a>
+                                <a *ngIf = "channel.groupID == group.id" class = "dropdown-item" (click) = "joinChannel(group.id, channel.channelID)">{{ channel.channelName }}</a>
                             </div>
                         </div>
                     </div>
